--- a/cv.html
+++ b/cv.html
@@ -8,11 +8,11 @@
 
 	<title>Document</title>
 
-	<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" href="libs/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/main.css">
 
-	<script src="libs/swiper/swiper-bundle.min.js" defer></script>
-	<script src="libs/swiper/bindSwipers.js" defer></script>
+	<script src="libs/swiper-bundle.min.js" defer></script>
+	<script src="libs/bindSwipers.js" defer></script>
 	<script src="js/app.js" defer></script>
 
 </head>
